# WinTCP

./: CMakeLists.txt  README.md
WinBaseServer/: CMakeLists.txt
WinBaseServer/src/: WinBaseObserver.cpp  WinBaseServer.cpp
include/WinBaseServer/: WinBaseObserver.h  WinBaseServer.h  WinBaseServer_global.h
lib/: WinBaseServer.lib
test/: CMakeLists.txt
test/testClient/: CMakeLists.txt  main.cpp
test/testServer/: CMakeLists.txt  MyObserver.cpp  MyObserver.h  test.cpp
